# AF

./: .gitignore  1144F_directed_paths.cpp  AF_MAT.docx  CMakeLists.txt  descriptions.md  graph.cpp  padure_optimized.cpp  patrol2.cpp  patrol2_optimized.cpp  plan.md  safe_nodes.cpp  shortest_bridge_optimized.cpp  test_bipart.cpp  test_eqsat.cpp  test_safenodes.cpp  test_shortest_bridge_optimized.cpp  test_topsort.cpp  topsort.cpp
HW1/: 1881F_marked_nodes_diameter.cpp  critical_connections.cpp  descriptions.md  eqsat.cpp  padure.cpp  padure.in  patrol2.in  possible_bipartition.cpp  shortest_bridge.cpp  test_critical_connections.cpp  test_shortest_bridge.cpp  test_shortest_bridge_optimized.cpp  topsort.cpp
HW1/optimized/: padure_optimized.cpp  patrol2_optimized.cpp  shortest_bridge_optimized.cpp
HW2/: apm2.cpp  apm2_optimized.cpp  bile.cpp  bile.in  cablaj.cpp  cablaj.in  camionas_optimized.cpp  camionase.cpp  cheapest_flight_within_k_stops.cpp  checking_existence_limited_paths.cpp  descriptions.md  dragoni.cpp  dragoni_optimized.cpp  find_critical_pseudo_critical.cpp  graph.cpp  oracol.cpp  oracol.in  test_cheapest_flight_within_k_stops.cpp  test_checking_existence_limited_paths.cpp  test_find_critical_pseudo_critical.cpp  trilant.cpp  trilant.in
HW3/: 546E.cpp  cartite.cpp  descriptions.md  ghizi.cpp  ghizi.in  graph.cpp  harta.cpp  negot.cpp  negot.in  no_prime_sum.cpp  paznici.cpp  paznici.in  reconstruct_itinerary.cpp  seg.cpp  senat.cpp  senat.in  shortest_path_all_nodes.cpp  shortest_superstring.cpp  test_reconstruct_itinerary.cpp  test_shortest_path_all_nodes.cpp  test_shortest_superstring.cpp  test_valid_arrangement_of_pairs.cpp  valid_arrangement_of_pairs.cpp
etc/: iepuri.cpp  iepuri.in  power.cpp  power.in
